--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,14 @@ eureka.client.service-url.defaultZone= http://eurekha-server-container:8761/eure
 spring.data.mongodb.uri=mongodb+srv://Team03PDP:46IfTCwXGWJU9szW@cluster0.f89yz6n.mongodb.net/?retryWrites=true&w=majority&appName=AtlasApp
 spring.data.mongodb.database=PDP
 
-server.port=9203
+server.port=9200
 spring.application.name=team3-backend
+
+# App Properties
+jwtCookieName= Token
+jwtSecret= ======================Walmart=Spring===========================
+#server.port=9201
+jwtExpirationMs= 86400000
 
 
 #defaultZone: http://eurekha-server-container:8761/eureka
